Add missing statements and changelog entry